# QuantaDB

./: .gitmodules  CMakeLists.txt  GNUmakefile  HOWTO  README.md  README.ramcloud
apps/: CMakeLists.txt  ClusterPerf.cc
bindings/java/: build.gradle
config/grafana/: DSSNService.json  WorkerManager.json
config/prometheus/: prometheus-local.yml
docs/: Arch.md  Background.md  Cookbook.md  DSSN.md  Intro.md  QuantaDB Intro Public.pptx
intern-sungho/Jepsen-IO-Experiment/: README.md  version.sh
intern-sungho/Jepsen-IO-Experiment/clojure/agent/: core.clj  project.clj
intern-sungho/Jepsen-IO-Experiment/clojure/concurrent/: core.clj
intern-sungho/Jepsen-IO-Experiment/clojure/file/: core.clj  example.txt
intern-sungho/Jepsen-IO-Experiment/clojure/function/: core.clj
intern-sungho/Jepsen-IO-Experiment/clojure/macro/: core.clj
intern-sungho/Jepsen-IO-Experiment/clojure/new/: core.clj
intern-sungho/Jepsen-IO-Experiment/clojure/statement/: core.clj
intern-sungho/Jepsen-IO-Experiment/clojure/structure/: core.clj
intern-sungho/Jepsen-IO-Experiment/clojure/variables/: core.clj
intern-sungho/Jepsen-IO-Experiment/debug/: G1a-AbortedRead.edn  G2-master.edn  G2-pause.edn  LostUpdate.edn  history-20200717-210722.txt  history-20200717-211119.txt
intern-sungho/Jepsen-IO-Experiment/elle/: README.md
intern-sungho/Jepsen-IO-Experiment/elle/demo/: core.clj
intern-sungho/Jepsen-IO-Experiment/elle/redis/: append.clj  client.clj  core.clj  db.clj  nemesis.clj
intern-sungho/Jepsen-IO-Experiment/elle/src/: core.clj  graph.clj  hello.clj  util.clj
intern-sungho/Jepsen-IO-Experiment/store/: latest
intern-sungho/Jepsen-IO-Experiment/store/redis 6.0.3 (raft e0123a9) append /: latest
intern-sungho/Jepsen-IO-Experiment/store/redis 6.0.3 (raft e0123a9) append island/: latest
intern-sungho/Jepsen-IO-Experiment/store/redis 6.0.3 (raft e0123a9) append kill/: latest
intern-sungho/Jepsen-IO-Experiment/store/redis 6.0.3 (raft e0123a9) append mystery/: latest
intern-sungho/Jepsen-IO-Experiment/store/redis 6.0.3 (raft e0123a9) append partition/: latest
intern-sungho/Jepsen-IO-Experiment/store/redis 6.0.3 (raft e0123a9) append pause/: latest
intern-sungho/Jepsen-IO-Experiment/store/redis 6.0.3 (raft e0123a9) append pause,kill,partition,clock,member/: latest
intern-sungho/Jepsen-IO-Experiment/tutorial/checker/: etcdemo.clj
intern-sungho/Jepsen-IO-Experiment/tutorial/client/: etcdemo.clj
intern-sungho/Jepsen-IO-Experiment/tutorial/database/: etcdemo.clj
intern-sungho/Jepsen-IO-Experiment/tutorial/scaffolding/: etcdemo.clj  project.clj
intern-sungho/Test-Scenarios/: Validator Test Scenario 6_25_2020.xlsx  Validator Test Scenario 7_10_2020.xlsx  Validator Test Scenario 7_17_2020.xlsx
nanobenchmarks/: CMakeLists.txt  CleanerCompactionBenchmark.cc  HOTKVBenchmark.cc  HashObjectManagerBenchmark.cc  MakefragNano
plog/: plog_client.h  plog_common.h
pmemhash/benchmarks/: Makefile  hashmap_bench  hashmap_bench.cc  hashmap_kv_bench  hashmap_kv_bench.cc
pmemhash/internal/: cbuf_per_thread.h  hash_entry_reference.h  hash_entry_traits.h  hash_map.h  hashmap_kv_porting.h  hashmap_kv_rcache.h  raw_hash_set.h
pmemhash/test/: Makefile  cbuf_unit_test.cc  hashmap_kv_test.cc  hashmap_poc.cc  hashmap_unit_test.cc  hashmap_unit_test2.cc  hashmap_unit_test3.cc  hashmap_unit_test4.cc  hashmap_unit_test5.cc
pmemhash/utils/: c_str_util_classes.h  dlist.h
scripts/: cluster.py  clusterperf.py  config.py  genLevels.py  killpid  killserver  latency.sh  ptp-verify.sh  rawmetrics.py
src/: AdminClient.cc  AdminClient.h  AdminService.cc  BasicTransport.cc  BasicTransportTest.cc  BindTransport.h  CMakeLists.txt  CRamCloudTest.cc  ClientException.cc  ClientException.h  ClientTransactionTask.cc  ClientTransactionTask.h  ClientTransactionTaskTest.cc  Common.h  Context.cc  Context.h  CoordinatorClient.cc  Cycles.cc  Cycles.h  FailureDetector.cc  FailureDetector.h  HashEnumeration.cc  HashEnumeration.h  HashEnumerationIterator.cc  HashEnumerationIterator.h  HashObjectManager.cc  HashObjectManager.h  HashObjectManagerTest.cc  HashTableTest.cc  HomaTransport.cc  IndexLookupTest.cc  InfAddressTest.cc  InfRcTransport.cc  InfRcTransport.h  InfRcTransportTest.cc  InfUdDriver.cc  InfUdDriver.h  Infiniband.cc  Infiniband.h  Makefrag  (+55 more)
src/btreeRamCloud/: BtreeTest.cc
src/dssn/: ActiveTxSet.cc  ActiveTxSet.h  BlockedTxSet.cc  BlockedTxSet.h  CMakeLists.txt  ClusterTimeService.cc  ClusterTimeService.h  ClusterTimeServiceTest.cc  ConcludeQueue.h  Coordinator.h  CountBloomFilter.cc  CountBloomFilter.h  DLog.h  DLogTest.cc  DSSNService.cc  DSSNService.h  DSSNServiceMonitor.cc  DSSNServiceMonitor.h  DSSNServiceTest.cc  DataLog.h  DataLogTest.cc  DistributedTxSet.cc  DistributedTxSet.h  HOTKV.cc  HOTKV.h  HashmapKVStore.cc  HashmapKVStore.h  HashmapKVStoreTest.cc  HashmapTest.cc  KVInterface.h  KVStore.cc  KVStore.h  MemStreamIo.h  MemStreamIoTest.cc  MultiOpTest.cc  MultiReadTest.cc  MultiRemoveTest.cc  MultiWriteTest.cc  OpTrace.h  PeerInfo.cc  (+28 more)
src/pmemhash/: README.md
src/pmemhash/internal/: hash_entry_traits.h  hash_map.h
src/pmemhash/test/: hashmap_kv_test.cc
src/pmemhash/utils/: c_str_util_classes.h
src/quantadb/: ActiveTxSet.cc  ActiveTxSet.h  CMakeLists.txt  ClusterTimeService.cc  ClusterTimeService.h  ClusterTimeServiceTest.cc  ConcludeQueue.h  ConcurrentBitmap.h  ConcurrentBitmapTest.cc  Coordinator.h  CountBloomFilter.cc  CountBloomFilter.h  DLog.h  DLogTest.cc  DSSNService.cc  DSSNService.h  DSSNServiceMonitor.cc  DSSNServiceMonitor.h  DSSNServiceTest.cc  DataLog.h  DataLogTest.cc  DistributedTxSet.cc  DistributedTxSet.h  HashmapKVStore.cc  HashmapKVStore.h  HashmapKVStoreTest.cc  HashmapTest.cc  KVInterface.h  KVStore.cc  KVStore.h  MPSCQueue.h  MemStreamIo.h  MemStreamIoTest.cc  MultiReadTest.cc  MultiRemoveTest.cc  OpTrace.h  PeerInfo.cc  PeerInfo.cc~  PeerInfo.cz~  PeerInfo.h  (+24 more)
tools/dssn/: Makefile  datalog.cc  phc_test.c  process_cpu.cc  rdtscp.c  rdtscp.cc  rdtscp_test2.cc  txlog.cc  txlog_dumper.cc
tools/quantadb/: Makefile  datalog.cc  latency.sh  slab_bench.cc  txlog.cc
(+150 files in other folders)
